--- a/app/globals.css
+++ b/app/globals.css
@@ -1,77 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
-
-.red{
+.redb{
   border: 1px solid red;
 }
 
+@layer components {
+  .nav-animated {
+    @apply relative font-semibold text-white text-lg cursor-pointer w-fit md:block after:block after:content-[''] after:absolute after:h-[3px] after:bg-red-400 after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition-transform after:duration-300  after:bottom-[-5px] after:rounded-t-md 
+  }
+}
 
-
- 
- button:hover {
-  animation: shake3856 0.3s linear infinite both;
- }
- 
- @keyframes shake3856 {
-  0% {
-   -webkit-transform: translate(0);
-   transform: translate(0);
-  }
- 
-  20% {
-   -webkit-transform: translate(-2px, 2px);
-   transform: translate(-2px, 2px);
-  }
- 
-  40% {
-   -webkit-transform: translate(-2px, -2px);
-   transform: translate(-2px, -2px);
-  }
- 
-  60% {
-   -webkit-transform: translate(2px, 2px);
-   transform: translate(2px, 2px);
-  }
- 
-  80% {
-   -webkit-transform: translate(2px, -2px);
-   transform: translate(2px, -2px);
-  }
- 
-  100% {
-   -webkit-transform: translate(0);
-   transform: translate(0);
-  }
- }
- 
