--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,10 @@
   border: 1px solid red;
 }
 
+body {
+  background-color: dimgray;
+}
+
 @layer components {
   .nav-animated {
     @apply relative font-semibold text-white text-lg cursor-pointer w-fit md:block after:block after:content-[''] after:absolute after:h-[3px] after:bg-red-400 after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition-transform after:duration-300  after:bottom-[-5px] after:rounded-t-md 
