--- a/app/globals.css
+++ b/app/globals.css
@@ -1,20 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 @tailwind base;
-@tailwind components;
-@tailwind utilities;
+  @tailwind components;
+  @tailwind utilities;
+  
 
-.redb{
-  border: 1px solid red;
-}
-
-body {
-  background-color: rgb(2, 2, 2);
-}
-
-@layer components {
-  .nav-animated {
-    @apply relative font-semibold text-white text-lg cursor-pointer w-fit md:block after:block after:content-[''] after:absolute after:h-[3px] after:bg-red-400 after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition-transform after:duration-300  after:bottom-[-5px] after:rounded-t-md 
+  .back{
+    background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(38,95,98,1) 86%, rgba(56,89,96,1) 100%);
   }
-}
-
